[project]
name = "lab"
version = "0.1.0"
description = "Experimental prototypes written in Python."
readme = "README.md"
authors = [ { name = "sabertazimi", email = "sabertazimi@gmail.com" } ]
requires-python = ">=3.13"
dependencies = [ "bash-agent" ]

[tool.uv.workspace]
members = [ "packages/bash-agent" ]

[tool.uv.sources]
bash-agent = { workspace = true }

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
]
