[project]
name = "lab"
version = "0.1.0"
description = "Experimental prototypes written in Python."
readme = "README.md"
authors = [ { name = "sabertazimi", email = "sabertazimi@gmail.com" } ]
requires-python = ">=3.13"
dependencies = [ "agent-cli" ]

[tool.uv.workspace]
members = [ "packages/agent-cli" ]

[tool.uv.sources]
agent-cli = { workspace = true }

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
]
