[project]
name = "lab"
version = "0.1.0"
description = "Experimental prototypes written in Python."
readme = "README.md"
authors = [ { name = "sabertazimi", email = "sabertazimi@gmail.com" } ]
requires-python = ">=3.13"
dependencies = [ "agent-cli" ]

[dependency-groups]
dev = [
  "pyright>=1.1.408",
  "ruff>=0.14.14",
]

[tool.uv.workspace]
members = [ "packages/agent-cli" ]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[tool.uv.sources]
agent-cli = { workspace = true }

[tool.pyright]
typeCheckingMode = "strict"

[tool.ruff.lint]
select = [
  "E", # pycodestyle
  "F", # Pyflakes
  "UP", # pyupgrade
  "B", # flake8-bugbear
  "SIM", # flake8-simplify
  "I", # isort
]
ignore = [ "E501" ] # 忽略行长度限制
