[package]
name = "basis"
version = "0.1.0"
edition = "2021"
description = "Rust basis."
license = "MIT"
homepage = "https://github.com/sabertazimi/lab"
repository = "https://github.com/sabertazimi/lab"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.43"
git2 = "0.20.3"
