[package]
name = "rustlings"
version = "4.6.0"
authors = ["anastasie <ana@ana.st>", "Carol (Nichols || Goulding) <carol.nichols@gmail.com>"]
edition = "2021"

[dependencies]
argh = "0.1.13"
indicatif = "0.18.3"
console = "0.16.2"
notify = "4.0.18"
toml = "0.9.11"
regex = "1.12.2"
serde = {version = "1.0.228", features = ["derive"]}

[[bin]]
name = "rustlings"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.3"
glob = "0.3.3"
